# bagelfactor

./: .gitignore  README.md  pyproject.toml
src/bagelfactor/: database.py
tests/: test_database.py
