[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bagel-factor"
version = "0.0.1"
authors = [
  { name="Yanzhong Huang", email="eric.yanzhong.huang@gmail.com" },
]
description = "A factor backtesting framework"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=2.2.0",
    "matplotlib"
]   

[project.urls]
Homepage = "https://github.com/bagelquant/bagel-factor"
Issues = "https://github.com/bagelquant/bagel-factor/issues"
